# advent-of-code-2023

./: pyproject.toml
src/: problem1.py  problem10.py  problem11.py  problem12.py  problem13.py  problem14.py  problem15.py  problem16.py  problem17.py  problem18.py  problem19.py  problem2.py  problem20.py  problem21.py  problem3.py  problem4.py  problem5.py  problem6.py  problem7.py  problem8.py  problem9.py
src/search/: search.py
src/util/: grid.py  resources.py  search.py  timer.py
