[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
parsec = "^3.15"
numba = "^0.58.1"
numpy = "^1.26.2"
tqdm = "^4.66.1"
scipy = "^1.11.4"
graphviz = "^0.20.1"
imageio = "^2.33.1"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
